# ProjetoTCCPublico

./: .gitignore  README.md
BackEnd/: pyproject.toml
BackEnd/src/: api.py
BackEnd/src/config/: conf.ini  configuration.py
BackEnd/src/data/: database.py
BackEnd/src/domain/entities/: arquivosProdutos.py  modelos.py  parametrosTreinamentos.py  tratamentoDados.py  usuarios.py  variaveisTreinamentos.py
BackEnd/src/domain/enum/: tipoDado.py
BackEnd/src/repositories/: arquivosProdutosRepository.py  parametrosTreinamentoRepository.py  tratamentoDadosRepository.py
